--- a/assets/translations/vi-VN.json
+++ b/assets/translations/vi-VN.json
@@ -11,6 +11,7 @@
   "package_list": "Danh sách đóng gói",
   "attachment": "Tài liệu đính kèm",
   "input_account_password": "Quản lý quyền",
+  "logout": "Đăng xuất",
   "input_sn_model": "Nhập Model SN",
   "qr_code_scan": "Quét mã QR",
   "open_camera": "Mở máy ảnh",
