--- a/assets/translations/zh-TW.json
+++ b/assets/translations/zh-TW.json
@@ -34,6 +34,7 @@
   "login_success_guest": "您已成功登入，權限：訪客",
   "model_spec_template": "機種模板管理",
   "input_account_password": "登入",
+  "logout": "登出",
   "input_sn_model": "輸入機種序號",
   "qr_code_scan": "QR Code",
   "rfid_card": "RFID Card",
