新增部分UI語言包, 下載參考照片會把舊的給刪除
新增部分UI語言包, 下載參考照片會把舊的給刪除

--- a/assets/translations/en-US.json
+++ b/assets/translations/en-US.json
@@ -21,10 +21,18 @@
   "input_sn_model": "Input Information",
   "qr_code_scan": "QR Code",
   "open_camera": "Camera",
+  "please_input_account": "Please input your account",
+  "account": "Account",
+  "please_input_pwd": "Please input your password",
+  "pwd": "Password",
   "model_name": "Model Name",
   "please_input_model_name": "Please input model name",
   "sn": "Serial Number",
   "please_input_sn": "Please input serial number",
+  "select_model": "Please select model name",
+  "select_sn": "Please select serial number",
+  "search_list": "Search list",
+  "manual_input_model_sn": "Manual input model & sn",
   "cancel": "Cancel",
   "submit": "Submit",
   "submit_success": "SN: {}, Model: {} submitted",
@@ -51,6 +59,11 @@
   "images_saved": "Selected images have been saved!",
   "select_multiple_images": "Select Multiple Images",
   "no_images_found": "No images found in the specified directory.",
+  "no_photo_selected": "No photos selected",
+  "check_photo_message": "‼️ There are still unselected photos ‼️",
+  "return_page_message": "Are you sure you want to go back to the previous page?",
+  "yes": "Yes",
+  "no": "No",
   "save_selected_images": "Save Selected Images",
   "signature": "Signature",
   "name": "Name :",
