--- a/assets/translations/ja-JP.json
+++ b/assets/translations/ja-JP.json
@@ -10,15 +10,23 @@
   "hipot_test": "耐電圧試験",
   "package_list": "梱包リスト",
   "attachment": "添付資料",
-  "input_account_password": "権限管理",
+  "input_account_password": "ログイン",
   "logout": "ログアウト",
   "input_sn_model": "SN入力",
   "qr_code_scan": "QRコードスキャン",
   "open_camera": "カメラをオンにする",
+  "please_input_account": "アカウントを入力してください",
+  "account": "アカウント",
+  "please_input_pwd": "パスワードを入力してください",
+  "pwd": "パスワード",
   "model_name": "型番",
   "please_input_model_name": "型番を入力してください",
   "sn": "シリアル番号",
   "please_input_sn": "シリアル番号を入力してください",
+  "select_model": "モデル名を選択してください",
+  "select_sn": "シリアル番号を選択してください",
+  "search_list": "検索リスト",
+  "manual_input_model_sn": "手動入力モデルとsn",
   "cancel": "キャンセル",
   "submit": "送信",
   "check_failed": "不合格",
@@ -51,6 +59,11 @@
   "images_saved": "選択した画像が保存されました！",
   "select_multiple_images": "複数の画像を選択",
   "no_images_found": "指定されたディレクトリに画像が見つかりません。",
+  "no_photo_selected": "写真が選択されていません",
+  "check_photo_message": "‼️ まだ選択されていない写真があります ‼️",
+  "return_page_message": "前のページに戻ってもよろしいですか?",
+  "yes": "はい",
+  "no": "いいえ",
   "save_selected_images": "選択した画像を保存",
   "signature": "サイン",
   "name": "名前 :",
