--- a/assets/translations/zh-TW.json
+++ b/assets/translations/zh-TW.json
@@ -19,6 +19,10 @@
   "please_input_model_name": "請輸入機種名稱",
   "sn": "序號",
   "please_input_sn": "請輸入序號",
+  "select_model": "請選擇機種",
+  "select_sn": "請選擇序號",
+  "search_list": "掃描清單",
+  "manual_input_model_sn": "手動輸入機種序號",
   "cancel": "取消",
   "submit": "提交",
   "check_failed": "不合格",
@@ -55,6 +59,11 @@
   "images_saved": "儲存所選圖片！",
   "select_multiple_images": "選擇多張圖片",
   "no_images_found": "在指定目錄中找不到圖片。",
+  "no_photo_selected": "尚未選擇照片",
+  "check_photo_message": "‼️ 尚有未選擇的照片 ‼️",
+  "return_page_message": "您確定要返回上一頁嗎？",
+  "yes": "是",
+  "no": "否",
   "save_selected_images": "儲存所選圖片",
   "signature": "簽名",
   "name": "姓名 : ",
