--- a/assets/translations/vi-VN.json
+++ b/assets/translations/vi-VN.json
@@ -15,10 +15,18 @@
   "input_sn_model": "Nhập Model SN",
   "qr_code_scan": "Quét mã QR",
   "open_camera": "Mở máy ảnh",
+  "please_input_account": "Vui lòng nhập tài khoản của bạn",
+  "account": "tài khoản",
+  "please_input_pwd": "Vui lòng nhập mật khẩu của bạn",
+  "pwd": "mật khẩu",
   "model_name": "Tên model",
   "please_input_model_name": "Vui lòng nhập tên model",
   "sn": "Số sê-ri",
   "please_input_sn": "Vui lòng nhập số sê-ri",
+  "select_model": "Vui lòng chọn tên mẫu",
+  "select_sn": "Vui lòng chọn số sê-ri",
+  "search_list": "Danh sách tìm kiếm",
+  "manual_input_model_sn": "Mô hình nhập liệu thủ công & sn",
   "cancel": "Hủy",
   "submit": "Gửi",
   "check_failed": "Kiểm tra không thành công",
@@ -51,6 +59,11 @@
   "images_saved": "Đã lưu các ảnh đã chọn!",
   "select_multiple_images": "Chọn nhiều ảnh",
   "no_images_found": "Không tìm thấy ảnh trong thư mục đã chỉ định.",
+  "no_photo_selected": "Không có ảnh nào được chọn",
+  "check_photo_message": "‼️ Vẫn còn những bức ảnh chưa được chọn ‼️",
+  "return_page_message": "Bạn có chắc chắn muốn quay lại trang trước không?",
+  "yes": "Đúng",
+  "no": "KHÔNG",
   "save_selected_images": "Lưu ảnh đã chọn",
   "signature": "chữ ký",
   "name": "tên :",
